[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "day1"
path = "src/d1/day1.rs"

[[bin]]
name = "day2"
path = "src/d2/day2.rs"

[[bin]]
name = "day3"
path = "src/d3/day3.rs"

[[bin]]
name = "day4"
path = "src/d4/day4.rs"

[[bin]]
name = "day5"
path = "src/d5/day5.rs"

[[bin]]
name = "day6"
path = "src/d6/day6.rs"

[[bin]]
name = "day7"
path = "src/d7/day7.rs"

[[bin]]
name = "day8"
path = "src/d8/day8.rs"

[[bin]]
name = "day9"
path = "src/d9/day9.rs"

[[bin]]
name = "day10"
path = "src/d10/day10.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
